--- a/index.html
+++ b/index.html
@@ -1,119 +1,8 @@
- 
- ​<!DOCTYPE html​> 
- ​<​html​ ​lang​="​zh​"​> 
-  
- ​    ​<​head​> 
- ​        ​<​meta​ ​charset​="​UTF-8​"​> 
- ​        ​<​meta​ ​http-equiv​="​X-UA-Compatible​" ​content​="​IE=edge​"​> 
- ​        ​<​meta​ ​name​="​viewport​" ​content​="​width=device-width, initial-scale=1.0​"​> 
- ​        ​<​title​>​MIXMIND TEAM​</​title​> 
- ​        ​<​meta​ ​name​="​keywords​" ​content​="​imshito,blog,程序员,梦开始的地方,星火,mixmind​"​> 
- ​        ​<​script​ ​src​="​layui/layui.js​"​>​</​script​> 
- ​        ​<​script​ ​src​="​layui/notify.js​"​>​</​script​> 
- ​        ​<​link​ ​rel​="​stylesheet​" ​href​="​layui/css/layui.css​"​> 
- ​    ​</​head​> 
-  
- ​    ​<​script​> 
- ​         
- ​    ​</​script​> 
-  
- ​    ​<​body​> 
- ​        ​<​ul​ ​class​="​layui-nav​" ​style​="​text-align: center​"​> 
- ​            ​<​li​ ​class​="​layui-nav-item layui-this​"​> 
- ​                ​<​a​ ​href​>​首页​</​a​> 
- ​            ​</​li​> 
- ​            ​<​li​ ​class​="​layui-nav-item​"​> 
- ​                ​<​a​ ​href​="​zhanzhang.html​"​>​站长​</​a​> 
- ​            ​</​li​> 
-<​li​ ​class​="​layui-nav-item​"​> 
+对不起，由于必要，我们的Github网站需要改动，所以暂时关闭
+</hr>
+你可以看看这些
+</br>
+<​a​ ​href​="​https://github.com/imshito​"​>​Github</​a​> 
  ​                ​<​a​ ​href​="​https://imshito.wordpress.com/​"​>​博客</​a​> 
- ​            ​</​li​> 
-   
-<​li​ ​class​="​layui-nav-item​"​> 
- ​                ​<​a​ ​href​="​https://github.com/imshito"​>​Github</​a​> 
- ​            ​</​li​> 
+ ​          
   
- ​        ​</​ul​> 
- ​         
- ​<​div​ ​id​="​tp-weather-widget​"​>​</​div​>​<!-- 天气插件 --> 
- ​                ​<​script​> 
- ​                        ​(​function​(​a​,​h​,​g​,​f​,​e​,​d​,​c​,​b​)​{​b​=​function​(​)​{​d​=​h​.​createElement​(​g​)​;​c​=​h​.​getElementsByTagName​(​g​)​[​0​]​;​d​.​src​=​e​;​d​.​charset​=​"utf-8"​;​d​.​async​=​1​;​c​.​parentNode​.​insertBefore​(​d​,​c​)​}​;​a​[​"SeniverseWeatherWidgetObject"​]​=​f​;​a​[​f​]​||​(​a​[​f​]​=​function​(​)​{​(​a​[​f​]​.​q​=​a​[​f​]​.​q​||​[​]​)​.​push​(​arguments​)​}​)​;​a​[​f​]​.​l​=​+​new​ ​Date​(​)​;​if​(​a​.​attachEvent​)​{​a​.​attachEvent​(​"onload"​,​b​)​}​else​{​a​.​addEventListener​(​"load"​,​b​,​false​)​}​}​(​window​,​document​,​"script"​,​"SeniverseWeatherWidget"​,​"//cdn.sencdn.com/widget2/static/js/bundle.js?t="​+​parseInt​(​(​new​ ​Date​(​)​.​getTime​(​)​ ​/​ ​100000000​)​.​toString​(​)​,​10​)​)​)​; 
- ​                        ​window​.​SeniverseWeatherWidget​(​'show'​,​ ​{ 
- ​                        ​flavor​: ​"bubble"​, 
- ​                        ​location​: ​"WX4FBXXFKE4F"​, 
- ​                        ​geolocation​: ​true​, 
- ​                        ​language​: ​"zh-Hans"​, 
- ​                        ​unit​: ​"c"​, 
- ​                        ​theme​: ​"auto"​, 
- ​                        ​token​: ​"ac1d036a-99f3-4f88-ae98-f795bb93a9f0"​, 
- ​                        ​hover​: ​"disabled"​, 
- ​                        ​container​: ​"tp-weather-widget" 
- ​                        ​}​) 
- ​                         
- ​                ​</​script​>​<!-- 天气插件结束 --> 
- ​        ​<​div 
- ​            ​style​="​background-image:url('bj.webp');background-repeat:no-repeat;background-attachment:fixed;background-position: center;​"​> 
- ​            ​<​div​ ​style​="​line-height: 400px;;margin-left: 22.5%;​"​> 
- ​                ​<​h1​ ​style​="​font-size: 40px;color: white;​"​>​<​strong 
- ​                        ​style​="​color: #ff2a0e;font-style:45px;​"​>​MixMind TEAM</​strong​> 
- ​                    ​</​h1​> 
- ​            ​</​div​> 
-  
- ​        ​</​div​> 
- ​        ​<​div​> 
- ​            ​<​br​> 
- ​            ​<​span​> 
- ​                ​<​blockquote​ ​class​="​layui-elem-quote​" ​style​="​margin-left: 12.5%;​"​> 
- ​                    
- ​                   ​                ​</​blockquote​> 
- ​            ​</​span​> 
- ​            ​<​div​ ​class​="​layui-panel​"​> 
-  
- ​                ​<​div​ ​style​="​padding: 32px;​"​>​这里是imshito​</​div​> 
- ​                ​<​div​ ​style​="​padding: 28px;​"​>​本人是个初中生，还有好多东西还不好呢​</​div​> 
- ​                ​<​p​ ​style​="​padding: 28px;​"​>​<​br​>​喜欢Python Wed C# C++<​br​>​​​联系方式</​p​> 
- ​                ​<​hr​> 
- ​                ​<​p​ ​style​="​padding: 28px;​"​>​email：imshito@imshito.eu.org ​<​br​>​QQ:3421016150 ​<​br​>​​</​p​> 
- ​                 
-  
- ​            ​</​div​> 
- ​            ​<​div​ ​class​="​layui-bg-gray​" ​style​="​padding: 16px;​"​> 
- ​                ​<​div​ ​class​="​layui-row layui-col-space15​"​> 
- ​                    ​<​div​ ​class​="​layui-col-md6​"​> 
- ​                        ​<​div​ ​class​="​layui-card​"​> 
- ​                            ​<​div​ ​class​="​layui-card-header​"​>​​</​div​> 
- ​                            ​<​div​ ​class​="​layui-card-body​"​> 
- ​                                
- ​                            ​</​div​> 
- ​                        ​</​div​> 
- ​                    ​</​div​> 
- ​                    ​                 ​</​div​> 
- ​                        ​</​div​> 
- ​                    ​</​div​> 
-  
- ​                ​</​div​> 
- ​            ​</​div​> 
- ​        ​</​div​> 
-  
- ​        ​<​div​> 
- ​            ​<​br​> 
- ​            ​<​span​> 
- ​                ​<​blockquote​ ​class​="​layui-elem-quote​" ​style​="​margin-left: 12.5%;​"​> 
- ​                      ​                    ​<​br​> 
- ​                   
- ​                ​</​blockquote​> 
- ​            ​</​span​> 
-  
- ​        ​</​div​> 
-  
- ​        ​<​div​> 
- ​            ​<​hr​> 
- ​            ​<​div​ ​style​="​text-align: center;​"​> 
- ​                
- ​            ​</​div​> 
-  
- ​        ​</​div​> 
-  
- ​    ​</​body​> 
-  
- ​</​html​>
