--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-对不起，由于必要，我们的Github网站需要改动，所以暂时关闭
-</hr>
-你可以看看这些
-</br>
-<​a​ ​href​="​https://github.com/imshito​"​>​Github</​a​> 
- ​                ​<​a​ ​href​="​https://imshito.wordpress.com/​"​>​博客</​a​> 
- ​          
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MIXMIND TEAM</title>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href=""><strong>MIXMIND TEAM</strong></a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </nav>
+</body>
+</html>
