--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIXMIND TEAM</title>
 </head>
+<style>
+    nav ul li{
+        float: left;
+    }
+</style>
 <body>
     <nav>
         <ul>
             <li><a href=""><strong>MIXMIND TEAM</strong></a></li>
-            <li><a href=""></a></li>
+            <li><a href="">1</a></li>
         </ul>
     </nav>
 </body>
