--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>MIXMIND TEAM</title>
 </head>
 <style>
+    nav{
+        background-color: #1976D2;
+    }
     nav ul li{
         float: left;
         margin: 15px;
