--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 <style>
     nav{
         background-color: #1976D2;
+        overflow: hidden;
+    }
+    nav ul{
+        list-style-type: none;
+        margin: 0px;
+        padding: 0%;
     }
     nav ul li{
         float: left;
