--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     nav{
         background-color: #1976D2;
         overflow: hidden;
+        margin: 0px;
     }
     nav ul{
         list-style-type: none;
@@ -19,11 +20,14 @@
         float: left;
         margin: 15px;
             }
+    nav ul li a {
+        color: #FFFFFF;
+    }
 </style>
 <body>
     <nav>
         <ul>
-            <li><a href=""><strong>MIXMIND TEAM</strong></a></li>
+            <li><a href=""><strong style="font-size: 30px;">MIXMIND TEAM</strong></a></li>
             <li><a href="">1</a></li>
         </ul>
     </nav>
