--- a/index.html
+++ b/index.html
@@ -22,12 +22,20 @@
             }
     nav ul li a {
         color: #FFFFFF;
+        display: block;
+        text-decoration: none;
+        text-align: center;
+        padding: 14px 16px;
     }
+    nav ul li a:hover {
+        color: #ffffffaf;
+    }
+
 </style>
 <body>
     <nav>
         <ul>
-            <li><a href=""><strong style="font-size: 30px;">MIXMIND TEAM</strong></a></li>
+            <li><a href=""><strong style="font-size: 3px;">MIXMIND TEAM</strong></a></li>
             <li><a href="">1</a></li>
         </ul>
     </nav>
