--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href=""><strong style="font-size: 3px;">MIXMIND TEAM</strong></a></li>
+            <li><a href=""><strong>MIXMIND TEAM</strong></a></li>
             <li><a href="">1</a></li>
         </ul>
     </nav>
