--- a/index.html
+++ b/index.html
@@ -30,14 +30,30 @@
     nav ul li a:hover {
         color: #ffffffaf;
     }
-
+h1{
+    color: #FFFFFF;
+}
+h3{
+    color: #ffffffaf;
+}
 </style>
 <body>
     <nav>
         <ul>
             <li><a href=""><strong>MIXMIND TEAM</strong></a></li>
-            <li><a href="">1</a></li>
+            <li><a href="">首页</a></li>
+            <li><a href="">关于</a></li>
         </ul>
     </nav>
+    <div>
+        <div>
+            <h1>"Be nice to nerds. Chances are you'll end up working for one."</h1>
+            <h3>“对呆子好一点，很有可能你以后要为呆子工作。”</h3>
+        </div>
+        <div>
+            <h5 style="text-align: left;">Bill Gates  Microsoft CEO</h5>
+        </div>
+
+    </div>
 </body>
 </html>
