--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
         color: #ffffffaf;
     }
 h1{
-    color: #FFFFFF;
+    color: #212121;
 }
 h3{
-    color: #ffffffaf;
+    color: #757575;
+}
+.mainpage{
+
 }
 </style>
 <body>
@@ -46,7 +49,7 @@ h3{
         </ul>
     </nav>
     <div>
-        <div>
+        <div class="mainpage">
             <h1>"Be nice to nerds. Chances are you'll end up working for one."</h1>
             <h3>“对呆子好一点，很有可能你以后要为呆子工作。”</h3>
         </div>
