--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ h5{
 }
 .mainpage{
     margin-top: 30px;
+    border-color: #757575;
+    border: 1px;
+    border-radius: 16px;
 }
 </style>
 <body>
