--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h5{
 .mainpage{
     margin-top: 30px;
     border-color: #757575;
-    border: 1px;
+    border: 12px;
     border-radius: 16px;
 }
 </style>
@@ -60,7 +60,7 @@ h5{
             <h3>“对呆子好一点，很有可能你以后要为呆子工作。”</h3>
         </div>
         <div>
-            <h5 style=" margin-left: 0px; text-align: left;">Bill Gates  Microsoft CEO</h5>
+            <h5 style=" margin-left: 0px; text-align: left;"> <strong>Bill Gates</strong>  Microsoft CEO</h5>
         </div>
 
     </div>
