--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@ h5{
         <div>
             <h5 style=" margin-left: 0px; text-align: left;"> <strong>Bill Gates</strong>  Microsoft CEO</h5>
         </div>
+        <div>
+
+        </div>
 
     </div>
-    ver:1
+    <h6 style="text-align: center;">ver:1.1</h6>
+    
 </body>
 </html>
