--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ h5{
     margin-top: 30px;
     border-color: #757575;
     border: 12px;
+    border-style: solid;
     border-radius: 16px;
 }
 </style>
