--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h5{
 .mainpage{
     margin-top: 30px;
     border-color: #757575;
-    border: 1px;
+    border: 2px;
     border-style: solid;
     border-radius: 8px;
 }
@@ -57,10 +57,13 @@ h5{
     </nav>
     <div>
         <div class="mainpage">
+            <div style="margin: 20px;">
             <h1>"Be nice to nerds. Chances are you'll end up working for one."</h1>
             <h3>“对呆子好一点，很有可能你以后要为呆子工作。”</h3>
             <h5 style=" margin-left: 0px; text-align: left;"> <strong>Bill Gates</strong> Microsoft CEO</h5>
+            </div>
         </div>
+
         <div>
             
         </div>
