--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         background-color: #1976D2;
         overflow: hidden;
         margin: 0px;
+         border-color: #1976D2;
+    border: 2px;
+    border-style: solid;
+    border-radius: 8px;
     }
     nav ul{
         list-style-type: none;
