--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     nav ul li a:hover {
         color: #ffffffaf;
     }
-h1{
+h2{
     color: #212121;
 }
 h3{
@@ -60,9 +60,14 @@ h5{
         </ul>
     </nav>
     <div>
+        <div>
+            <h1>
+                WECOME! (￣▽￣)~*
+            </h1>
+        </div>
         <div class="mainpage">
             <div style="margin: 20px;">
-            <h1>"Be nice to nerds. Chances are you'll end up working for one."</h1>
+            <h2>"Be nice to nerds. Chances are you'll end up working for one."</h1>
             <h3>“对呆子好一点，很有可能你以后要为呆子工作。”</h3>
             <h5 style=" margin-left: 0px; text-align: left;"> <strong>Bill Gates</strong> Microsoft CEO</h5>
             </div>
