--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         background-color: #1976D2;
         overflow: hidden;
         margin: 0px;
-         border-color: #1976D2;
+      
+         border: #1976D2;
     border: 2px;
     border-style: solid;
     border-radius: 8px;
@@ -45,7 +46,7 @@ h5{
 }
 .mainpage{
     margin-top: 30px;
-    border-color: #757575;
+    border: #757575;
     border: 2px;
     border-style: solid;
     border-radius: 8px;
