--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         background-color: #1976D2;
         overflow: hidden;
         margin: 0px;
+        border-radius: 8px;
       
     }
     nav ul{
