--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ h5{
             <h1>
                 WECOME!   (￣▽￣)~*
             </h1>
+            <h5>
+                你现在在MixMind TEAM官网
+            </h5>
         </div>
         <div class="mainpage">
             <div style="margin: 20px;">
