--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@ h5{
             </div>
         </div>
 
-        <div>
-            <h2>近期></h2>
+        <div class="mainpage">
+            <h2>近期</h2>
             <h3>前往博客了解发生了什么  <a href="https://imshito.wordpress.com" style="color: #1976D2;">点我</a>!!</h3>
         </div>
-        <div class="aboutmecard">
-            <h2>关于我们></h2>
+        <div class="mainpage">
+            <h2>关于我们</h2>
             <h3>IMSHITO TEAM 现已改名为MixMind TEAM</h3>
             <h5>
                 <p>
