--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ h5{
         margin: 20px;
     }
     margin-top: 30px;
-    border: #757575;
+    border-color: #757575;
     border: 2px;
     border-style: solid;
     border-radius: 8px;
