--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ h5{
 <body>
     <nav>
         <ul>
-            <li><a href=""><strong>MixMind TEAM</strong></a></li>
-            <li><a href="">首页</a></li>
-            <li><a href="">关于</a></li>
+            <li><a href="#"><strong>MixMind TEAM</strong></a></li>
+            <li><a href="#">首页</a></li>
+            <li><a href="https://imshito.wordpress.com">博客</a></li>
         </ul>
     </nav>
     <div>
@@ -89,10 +89,22 @@ h5{
         <div class="mainpage">
             <div class="main">
                 <h2>近期</h2>
-            <h3>前往博客了解发生了什么  <a href="https://imshito.wordpress.com" style="color: #1976D2;">点我</a>!!</h3>
+            <h3>前往博客了解发生了什么  <a href="https://imshito.wordpress.com/blog" style="color: #1976D2;">点我</a>!!</h3>
         
             </div>
             </div>
+
+            <div class="mainpage">
+                <div class="main">
+                    <h2>开源项目</h2>
+                    <h3>前往Github  <a href="https://github.com/imshito" style="color: #1976D2;">点我</a>!!</h3>
+                <h3>目前暂时没有</h3>
+            
+                </div>
+                </div>
+
+
+
         <div class="mainpage">
             <div class="main">
                  <h2>关于我们</h2>
