--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ ul{
         </div>
 
     </div>
-    <h6 style="text-align: center;">MixMind TEAM Ver:3.3 UPDATE:20240211</h6>
+    <h6 style="text-align: center;">MixMind TEAM Ver:3.3.1 UPDATE:20240211 imshito.eu.org</h6>
     
 </body>
 </html>
