--- a/s/index.html
+++ b/s/index.html
@@ -16,8 +16,8 @@ div{font-family:Noto Sans SC}
         <div >
             <div style="position: absolute;top: 20px; left: 20px;"><iframe style="border-radius: 8px;" frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=2&id=1451778670&auto=1&height=66"></iframe></div>
             <div style="color: white;position: absolute;top: 20%;width: 100%;margin: 0 auto;">
-                <h1 style="text-align: center;">QUARK SPACE</h1>
-                <h5 style="text-align: center;">夸克 空间</h5>
+                <h1 style="text-align: center;">Mix Search</h1>
+                
                 <div style="width: 40%;margin: 0 auto;">
                     <input id="txt" type="text" style="height: 30px; width: 100%;background-color: rgb(255, 255, 255);border-width:2px;border-color: rgb(187, 187, 187);border-style:solid ;border-radius: 48px;">
                 </div>
@@ -32,10 +32,9 @@ div{font-family:Noto Sans SC}
     </div>
     <div id="bj1" style="background-color: rgba(0, 0, 0, 0);color: white;background-image: url('https://www.guanyujiang.com/api/bingapi.php?rand=true');background-position: center center;background-attachment: fixed; background-repeat: no-repeat;background-size: cover;">
         <div style="position: relative;top: 50px;">
-            <div style="text-align: center;font-size: 2em;">你好，这里是QUARK SPACE</div>
-            <h4 style="text-align: center;">一个人的工作室</h4>
+            
             <div style="margin: 0 auto;width: 100%;text-align: center;font: 1em sans-serif;">
-                QUARK SPACE的联系方式
+                联系方式
                 <span><button onclick="tsk1open()">💻🖥📱</button></span>
             </div>
             <div style="text-align: center;width: 100%;">
