--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@ ul{
                     <h3>网站项目</h3>
                     <ul>
                         <h5>
-                            <li><a href="/ct" style="color: #1976D2;">计时器</a></h5></li>
+                            <li><a href="/ct" style="color: #1976D2;">计时器</a></li>
                         </h5>  
                     </ul>
                     <h3>其他链接</h3>
                     <ul>
                         <h5>
                             
-                    <li><a href="https://github.com/imshito" style="color: #1976D2;">Github</a></h5></li>
+                    <li><a href="https://github.com/imshito" style="color: #1976D2;">Github</a></li>
                     <li><a href="https://imshito.wordpress.com" style="color: #1976D2;">博客</a></li>
                     <li><a href=" https://space.bilibili.com/1799847757" style="color: #1976D2;">BiliBili</a></li>
                         </h5>  
@@ -164,7 +164,7 @@ ul{
         </div>
 
     </div>
-    <h6 style="text-align: center;">MixMind TEAM Ver:3.3.4 UPDATE:20240211 imshito.eu.org</h6>
+    <h6 style="text-align: center;">MixMind TEAM Ver:3.3.5 UPDATE:20240211 imshito.eu.org</h6>
     
 </body>
 </html>
