--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ ul{
     <div>
         <div>
             <h1>
-                WECOME!   (￣▽￣)~*
+                WELCOME!   (￣▽￣)~*
             </h1>
             <h5>
                 你现在在MixMind TEAM官网
@@ -164,7 +164,7 @@ ul{
         </div>
 
     </div>
-    <h6 style="text-align: center;">MixMind TEAM Ver:3.3.5 UPDATE:20240211 imshito.eu.org</h6>
+    <h6 style="text-align: center;">MixMind TEAM Ver:3.3.6 UPDATE:20240211 imshito.eu.org</h6>
     
 </body>
 </html>
