--- a/sj/index.html
+++ b/sj/index.html
@@ -33,7 +33,7 @@
                         id: 'ID-demo-layer-direction-r',
                         content: ['userbook.html', 'yes']
                       });"><a>用户手册</a></span>
-                    <span class="layui-btn-sm" ><a href="https://www.github.com/imshito">Github</a></span>
+                    <span class="layui-btn-sm" ><a href="https://www.github.com/Dariondong">Github</a></span>
                     <span class="layui-btn-sm" ><a href="https://gzsgyz.github.io/sj">回到旧版</a></span>
                     <span class="layui-btn-sm" ><a href="https://imshito.eu.org">作者主页</a></span>
                     <span class="layui-btn-sm" onclick="document.getElementById('caidan').style.display='none'"><a>干掉这个东西</a></span>
@@ -46,7 +46,7 @@
         </div><br>
         <div class="layui-panel">
             <div class="layui-card">
-                <div class="layui-card-header">天苍苍，野茫茫，风吹草低见牛羊。<span class="layui-btn-sm" onclick="
+                <div class="layui-card-header"><span class="layui-btn-sm" onclick="
                     if (localStorage.getItem('adminkey')==prompt('输入管理员密码')){
                     layer.open({
                       type: 2,
@@ -110,6 +110,7 @@
                 <div class="layui-btn-group" style="margin-top: 150px;width: 205px;" id="btngroup">
                     
                     <button class="layui-btn" id="btnpt" onclick="ptc()">摇</button>
+                    <button class="layui-btn" id="btnpt"><a href="#">刷新</a></button>
             
                 </div>
                 </blockquote>
