--- a/sj/index.html
+++ b/sj/index.html
@@ -110,7 +110,7 @@
                 <div class="layui-btn-group" style="margin-top: 150px;width: 205px;" id="btngroup">
                     
                     <button class="layui-btn" id="btnpt" onclick="ptc()">摇</button>
-                    <button class="layui-btn" id="btnpt"><a href="#">刷新</a></button>
+                    <button class="layui-btn" id="btnpt"><a href="/index.html">刷新</a></button>
             
                 </div>
                 </blockquote>
