--- a/index.html
+++ b/index.html
@@ -112,6 +112,14 @@ ul{
 
                 </div>
             </div>
+            <div class="mainpage">
+                <div class="main">
+                    <h2>全新摇号系统上线</h2>
+                    <h3>前往下载！！ <a href="https://github.com/dariondong/MaBuYaoHaoNEXT/releases/tag/%E6%AD%A3%E5%BC%8F%E7%89%88"
+                            style="color: #1976D2;">点我</a>!!</h3>
+
+                </div>
+            </div>
 
             <div class="mainpage">
                 <div class="main">
