--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ ul{
     <script src="./vue.js"></script>
     <body>
         <div style="background-image:
-            url('https://bing.img.run/rand.php');max-width: 100%;height:
+            url('https://uapis.cn/api/bing?rand=true');max-width: 100%;height:
             auto;background-repeat:no-repeat;height: 700px;border-radius: 8px;">
             <nav>
                 <ul>
